--- a/package.json
+++ b/package.json
@@ -7,17 +7,9 @@
     "google-maps-react": "^2.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
-    "react-art": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
-    "react-native": "^0.60.5",
-    "react-native-elements": "^1.2.0",
-    "react-native-web": "^0.11.7",
-    "react-router-dom": "^5.0.1",
-    "react-router-native": "^5.0.1",
-    "react-scripts": "^3.1.1",
-    "scriptjs": "^2.5.9",
-    "simple-react-google-maps": "^1.1.2"
+    "react-scripts": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
